# energy-monitor-ha

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: leds.rs  main.rs  zcr.rs
src/config/: button.rs  json_body.rs  mod.rs  server.rs  structs.rs
src/mqtt/: mod.rs  sensor.rs
src/stpm/: calibration.rs  mod.rs  sample.rs
src/stpm/chip/: configuration.rs  mod.rs  reader.rs  registers.rs
src/stpm/driver/: mod.rs  spi.rs
src/wifi/: dhcp.rs  mod.rs
