[package]
name    = "energy-monitor"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
critical-section    = "1.1"
embassy-executor    = { version = "0.5.0", features = ["nightly"] }
#embassy-executor    = { version = "0.5.0", features = ["task-arena-size-8192"] }
embassy-sync        = "0.5.0"
embassy-time        = { version="0.3.0", features=["generic-queue-8"]}
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-net = { version = "0.4.0", features = ["tcp", "dhcpv4", "medium-ethernet", "proto-ipv4", "log", "dns", "udp"] }

embedded-hal        = "1.0.0"
embedded-hal-async  = "1.0.0"
embedded-hal-bus    = "0.1.0"
embedded-io-async   = "0.6.1"
esp-backtrace       = { version = "0.11.1", features = ["exception-handler", "panic-handler", "println", "esp32"] }
esp-println         = { version = "0.9.1", features = ["log", "esp32"] }
esp-wifi = { version = "0.4.0", features = ["esp32", "async", "embassy-net", "wifi", "ipv4", "udp", "ps-min-modem", "ps-max-modem"] }

heapless            = "0.8.0"
static_cell         = { version = "2.0.0", features = ["nightly"] }
log                 = "0.4"
rust-mqtt = { version = "0.3.0", default-features = false }
rand_core = "0.6.4"

serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
fugit = "0.3.7"
crc = "3.0.1"
embassy-futures = "0.1.1"
edge-dhcp = "0.2.0"
picoserve = { version = "0.10.2", features = ["embassy"] }
esp-storage = { version="0.3.0", features = [ "esp32" ]}
embedded-storage = "0.3.1"
postcard = { version = "1.0.8", features = ["use-crc"] }

[dependencies.esp-hal]
version = "0.16.0"
features = ["esp32", "log", "embassy", "embassy-executor-thread", "async", "embassy-time-timg0", "vectored"]


[profile.dev]
opt-level        = 3

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false
